# qwqdsp

./: CMakeLists.txt  readme.md  readme.txt  todo.md
qwqdsp/: CMakeLists.txt  readme.txt  todo.md
qwqdsp/cmake/: warnings.cmake
qwqdsp/examples/: CMakeLists.txt  blit.cpp  convolution.cpp  dsf.cpp  fft_interpolation.cpp  fir_design.cpp  formant_filter.cpp  freq_shifter.cpp  interpolations.cpp  minimum_phase_fir.cpp  readme.txt  stupid_resynthsis.cpp
qwqdsp/include/qwqdsp/: convert.hpp  interpolation.hpp  interpolation4.hpp  noise.hpp  polymath.hpp  segement_process.hpp
qwqdsp/include/qwqdsp/adaptive/: burg_lp.hpp  lag_buffer.hpp  nlms.hpp  rls_filter.hpp
qwqdsp/include/qwqdsp/filter/: allpass.hpp  biquad.hpp  cheb2_lphp.hpp  comfomal.hpp  complex_halfband.hpp  eq_ripple_fir.hpp  fir.hpp  fir_design.hpp  formant.hpp  gold_rader.hpp  iir_cpx_hilbert.hpp  iir_design.hpp  iir_design_extra.hpp  iir_hilbert.hpp  iir_hilbert4.hpp  int_delay.hpp  lattice.hpp  linkwitz_riley.hpp  match_biquad.hpp  median.hpp  parallel_allpass.hpp  rbj.hpp  svf.hpp  thiran_filter.hpp  traditional_design.hpp  window_fir.hpp
qwqdsp/include/qwqdsp/filter/fixed/: acc_traits.hpp  df1_biquad.hpp  df1_biquad_q2.hpp  df1_biquad_split.hpp  gold_rader.hpp
qwqdsp/include/qwqdsp/fx/: delay_line.hpp  new_coeffs.h  resample.hpp  resample_iir.hpp  resample_iir_dynamic.hpp  uniform_convolution.hpp
qwqdsp/include/qwqdsp/interpolation/: catmull_rom_spline.hpp  linear.hpp  makima.hpp  sppchip.hpp
qwqdsp/include/qwqdsp/misc/: ampd_peak.hpp  crossover.hpp  integrator.hpp  peakfind.hpp  smoother.hpp
qwqdsp/include/qwqdsp/osciilor/: blit.hpp  blit_pwm.hpp  coridc_sine_osc.hpp  dr_sine_osc.hpp  dsf.hpp  dsf_correct.hpp  elliptic_sine_osc.hpp  mcf_sine_osc.hpp  noise.hpp  poly_sine_osc.hpp  polyblep.hpp  raw_oscillor.hpp  table_sine_osc.hpp  table_sine_v2.hpp  vic_sine_osc.hpp
qwqdsp/include/qwqdsp/pitch/: fast_yin.hpp  yin.hpp
qwqdsp/include/qwqdsp/segement/: analyze.hpp  analyze_auto.hpp  analyze_synthsis_offline.hpp  analyze_synthsis_online.hpp
qwqdsp/include/qwqdsp/spectral/: complex_fft.hpp  ncbin.hpp  real_fft.hpp  reassignment.hpp  sst.hpp  wavelet.hpp
qwqdsp/include/qwqdsp/window/: blackman.hpp  hann.hpp  kaiser.hpp  lanczos.hpp  taylor.hpp  window.hpp
qwqdsp/playing/: FontRGB.hpp  OLEDDisplayRGB.cpp  OLEDDisplayRGB.h  Rectange.hpp  canvas.hpp  playing.cpp  slider.cpp  slider.hpp  usf.hpp
qwqdsp/source/: coeffs.h  design.py  elliptic_blep.hpp  fir_design.cpp  oouras.cpp  resample_iir.cpp  resample_iir_dynamic.cpp
