include(cmake/warnings.cmake)

add_library(qwqdsp
    STATIC
        "./source/oouras.cpp"
)
target_include_directories(qwqdsp PUBLIC "./include")
set_target_properties(qwqdsp PROPERTIES CXX_STANDARD 20)
qwqdsp_set_warning(qwqdsp)

if (qwqdsp_have_raylib)
    add_executable(playing
        "./playing/playing.cpp"
        "./playing/slider.cpp"
        # "./playing/FontRGB.cpp"
        # "./playing/OLEDDisplayRGB.cpp"
        # "./playing/stb_image_write.c"
    )
    target_link_libraries(playing PUBLIC qwqdsp raylib)
    set_target_properties(playing PROPERTIES CXX_STANDARD 20)
    qwqdsp_set_warning(playing)

    add_subdirectory(examples)
endif()